--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/gre/slide2d",
   "dependencies": {
+    "draw-image-normalized": "^0.1.1",
     "rect-crop": "0.0.0"
   }
 }
